# programs/num-token/Cargo.toml
[package]
name = "c8ntinuum"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "c8ntinuum"

[features]
default = []
no-entrypoint = []
all = []

[dependencies]
bytemuck = "1.7.0"   # or the latest version available
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "=0.30.1", features = ["memo"] }
solana-program = "1.18.26"
base64 = "0.22.1"
hex = "0.4"
solana_ed25519_verify = "0.1.1"

